# Audio-Based-Math-Solver

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_gemini.py
data/: textbook_index.json
data/processed/: training_data.csv
models/baseline/: intent_encoder.joblib  metadata.json  shape_encoder.joblib  vectorizer.joblib
notebooks/: experimentation.ipynb
src/: __init__.py  inference.py  main.py  math_calculator.py  textbook_knowledge.py  web_app.py
src/ml/: __init__.py  model.py
src/preprocessing/: __init__.py  entity_extractor.py  pipeline.py
src/rules/: __init__.py  evaluator.py
src/templates/: index.html
tests/: test_model.py
